--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1678,3 +1678,20 @@
   author={Thomas M. Cover and Joy A. Thomas},
   year={2005}
 }
+
+@article{Amari1977DynamicsOP,
+  title={Dynamics of pattern formation in lateral-inhibition type neural fields},
+  author={Shun‐ichi Amari},
+  journal={Biological Cybernetics},
+  year={1977},
+  volume={27},
+  pages={77-87}
+}
+
+@article{Sandamirskaya2014DynamicNF,
+  title={Dynamic neural fields as a step toward cognitive neuromorphic architectures},
+  author={Yulia Sandamirskaya},
+  journal={Frontiers in Neuroscience},
+  year={2014},
+  volume={7}
+}
